# Mani

./: .gitignore  README.md  bch_commutator_visualization.py  config.py  pose_graph_optimization_visualization.py  pyproject.toml  se3_exponential_map.py  se3_relative_pose.py  se3_visualization.py  slam_keyframes_visualization.py  so3_composition_vs_addition.py  so3_manifold_visualization.py  so3_visualization.py
.github/workflows/: ci.yml  manim-test.yml  pylint.yml  python-app.yml  website.yml
docs/: _config.yml  index.html  script.js  styles.css
scripts/: generate_previews.py  setup.py
tests/: __init__.py  test_config.py
