[project]
name = "slam-manim-visualizations"
version = "0.1.0"
description = "Educational Manim visualizations for SLAM and robotics concepts"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.7.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
manim = [
    "manim>=0.17.0",
]
dev = [
    "pytest>=7.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "scripts/*.py",
    "tests/*.py",
    "README.md",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "E0401",  # import-error (Manim not available in CI)
    "E0602",  # undefined-variable (Manim imports not available)
    "W0401",  # wildcard-import (Manim uses wildcard imports)
    "W0611",  # unused-import (numpy imported but not used in some files)
    "C0301",  # line-too-long (allow longer lines for Manim)
    "C0303",  # trailing-whitespace (will be fixed by black)
    "C0304",  # missing-final-newline (will be fixed by black)
    "R0903",  # too-few-public-methods (Manim scenes often have only construct)
    "R0914",  # too-many-locals (Manim scenes can have many variables)
    "R0915",  # too-many-statements (Manim scenes can be complex)
    "R0902",  # too-many-instance-attributes (config classes need many attributes)
    "C0103",  # invalid-name (allow some non-snake_case for Manim)
    "W0201",  # attribute-defined-outside-init (Manim pattern)
    "W0612",  # unused-variable (some variables used for clarity)
    "W0718",  # broad-exception-caught (acceptable for scripts)
    "W1510",  # subprocess-run-check (acceptable for scripts)
    "W1514",  # unspecified-encoding (acceptable for scripts)
    "W1401",  # anomalous-backslash-in-string (LaTeX strings)
    "R0913",  # too-many-arguments (Manim functions can have many args)
    "R0917",  # too-many-positional-arguments (Manim functions can have many args)
    "C0325",  # superfluous-parens (acceptable)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 